# dotfiles

./: .Xresources  .emacs  .gitignore  .xinitrc  .xmobarrc  .zshrc  10-keyboard.conf  Makefile  README.md  README.org  xmonad.hs
src/: boostrap-system.mk  bootstrap-system.mk
src/emacs/: .emacs  install-packages.el
src/git/: .gitconfig
src/x11/: .Xresources  .xinitrc
src/x11/pointer/thinkpad-x61/: 20-trackpoint.conf
src/xmonad/: .xmobarrc  my-xmonad.cabal  stack.yaml  xmonad.hs
src/zsh/: .zlogin  .zprofile  .zshrc  aliases
xmonad/: xmonad.hs
