name:                my-xmonad
version:             0.1.0.0
author:              lloydkirk
maintainer:          kirklloyd@gmail.com
build-type:          Simple
cabal-version:       >=1.10
executable my-xmonad
  main-is:             xmonad.hs
  build-depends:       base >=4.9 && <4.10
                     , xmonad
                     , xmonad-contrib
                     , containers
                     , X11
  default-language:    Haskell2010
